2007-06-18  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs, libsteticui/SignalsEditorBackend.cs,
	  libsteticui/WidgetPropertyTreeBackend.cs,
	  libsteticui/WidgetEditSession.cs, libsteticui/PropertyTree.cs,
	  libsteticui/WidgetActionBar.cs, libsteticui/ApplicationBackend.cs,
	  libsteticui/PaletteBackend.cs, libsteticui/Project.cs,
	  libstetic/IProject.cs, libstetic/ItemDescriptor.cs,
	  libstetic/ObjectWrapper.cs, libstetic/WidgetLibrary.cs,
	  libstetic/ErrorWidget.cs, libstetic/WidgetUtils.cs,
	  libstetic/ClassDescriptor.cs: Allow selecting the target the gtk#
	  version of a project.
	* libstetic/wrapper/objects.xml: Added new widgets, properties and
	  events for gtk# 2.6.

2007-06-12  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/lib/Mono.Cecil.dll: Updated from SVN, to keep in sync
	  with MD.

2007-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/Project.cs: Make sure the project backend is loaded when
	  checking the CanGenerateCode property.

2007-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/ImageInfo.cs: Load images from a path relative to the entry
	  assembly location.

2007-06-11  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/Project.cs: Fix problem with reading empty action groups.

2007-06-04  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/GeneratorContext.cs: IconLoader must be an internal class.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libstetic/wrapper/Action.cs: Generate initialization of the Active
	  and DrawAsRadio properties. They are not generated by default
	  because they belong to a Gtk.Action subclass. Fixes bug #81785.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 

	* libsteticui/ProjectBackend.cs, libsteticui/Project.cs: Added method
	  for getting all widget types included in a project.
	* libstetic/wrapper/objects.xml: Gtk.Bin now inherits the properties of
	  Gtk.Container.

2007-05-31  Lluis Sanchez Gual <lluis@novell.com> 
